Added two new modules to the module page: Accounts and Passwords, and The Ups and Downs of Social Media

--- a/modules.html
+++ b/modules.html
@@ -823,6 +823,73 @@
 
     <!-- New version without the pagination -->
     <div class="tempModuleRows row paddedTop">
+      <!-- Accounts & Passwords -->
+      <div class="tempModuleColumns col-lg-4 col-md-6 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/accounts" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" src="/img/acctandpasswords.png" alt="Accounts and Passwords Thumbnail">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle" id='modTitle10'>
+                  <span class="badge badge-primary newTag">NEW!</span>
+                  &nbsp Accounts and Passwords
+                </span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <span class="card-text">
+              Young people learn how to create an account on social media and
+              practice creating a safe username and password.
+            </span>
+            <a id='modLink10' aria-labelledby='modLink10 modTitle10' href="https://app.socialmediatestdrive.org/intro/accounts" class="card-text" target="_none">
+              Click here to start</a>
+            <span class="card-text">
+              the module.
+            </span>
+            <br>
+            <br>
+          </div>
+        </div>
+      </div>
+
+      <!-- The Ups and Downs of Social Media -->
+      <div class="tempModuleColumns col-lg-4 col-md-6 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/esteem" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" src="/img/esteem.png" alt="Ups and Downs of Social Media Thumbnail">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle" id='modTitle11'>
+                  <span class="badge badge-primary newTag">NEW!</span>
+                   &nbsp The Ups and Downs of Social Media
+                </span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <span class="card-text">
+              Young people reflect on how they can feel while using social media
+              and learn how to use social media in a positive and balanced way.
+            </span>
+            <a id='modLink11' aria-labelledby='modLink11 modTitle11' href="https://app.socialmediatestdrive.org/intro/esteem" class="card-text" target="_none">
+              Click here to start</a>
+            <span class="card-text">
+              the module.
+            </span>
+            <br>
+            <br>
+            <p class="card-text-csAlignment">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson: <span id='csTitle11'>My Social Media Life.</span>
+              <a id='csLink11' aria-labelledby='csLink11 csTitle11' href="https://www.commonsense.org/education/digital-citizenship/lesson/my-social-media-life"  target="_blank">
+                Learn more...
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
       <!-- Is It Private Information? -->
       <div class="tempModuleColumns col-lg-4 col-md-6 col-sm-12">
         <div class="card" style="width: 18rem;">
@@ -941,8 +1008,7 @@
               <img class="card-img-top" src="/img/smhabits.png" alt="Healthy Social Media Habits Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle" id='modTitle4'>
-                  <span class="badge badge-primary newTag">NEW!</span>
-                   &nbsp Healthy Social Media Habits
+                  Healthy Social Media Habits
                 </span>
               </div>
             </div>
@@ -1052,8 +1118,7 @@
               <img class="card-img-top" src="/img/targetedads.png" alt="Targeted Advertising Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle" id='modTitle7'>
-                  <span class="badge badge-primary newTag">NEW!</span>
-                  &nbsp Ads on Social Media
+                  Ads on Social Media
                 </span>
               </div>
             </div>
@@ -1090,8 +1155,7 @@
               <img class="card-img-top" src="/img/phishing.png" alt="Phishing Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle" id='modTitle8'>
-                  <span class="badge badge-primary newTag">NEW!</span>
-                  &nbsp Scams and Phishing
+                  Scams and Phishing
                 </span>
               </div>
             </div>
