Added advancedlit module to module page

--- a/modules.html
+++ b/modules.html
@@ -840,7 +840,8 @@
           <div class="card-body">
             <span class="card-text">
               Young people learn how to create an account on social media and
-              practice creating a safe username and password.
+              practice how to protect their privacy online by creating a safe
+              username and a strong password.
             </span>
             <a id='modLink10' aria-labelledby='modLink10 modTitle10' href="https://app.socialmediatestdrive.org/intro/accounts" class="card-text" target="_none">
               Click here to start</a>
@@ -869,8 +870,8 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people reflect on how they can feel while using social media
-              and learn how to use social media in a positive and balanced way.
+              Young people reflect on how social media can make them feel and
+              learn how to use social media in a positive and balanced way.
             </span>
             <a id='modLink11' aria-labelledby='modLink11 modTitle11' href="https://app.socialmediatestdrive.org/intro/esteem" class="card-text" target="_none">
               Click here to start</a>
@@ -883,6 +884,44 @@
               Aligned with Common Sense Education's Digital
               Citizenship lesson: <span id='csTitle11'>My Social Media Life.</span>
               <a id='csLink11' aria-labelledby='csLink11 csTitle11' href="https://www.commonsense.org/education/digital-citizenship/lesson/my-social-media-life"  target="_blank">
+                Learn more...
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- The Ups and Downs of Social Media -->
+      <div class="tempModuleColumns col-lg-4 col-md-6 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/advancedlit" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" src="/img/advancednews.png" alt="Responding to Breaking News Thumbnail">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle" id='modTitle12'>
+                  <span class="badge badge-primary newTag">NEW!</span>
+                   &nbsp Responding to Breaking News!
+                </span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <span class="card-text">
+               Young people learn how to react to breaking news on social media
+               and practice strategies for identifying reliable news online.
+            </span>
+            <a id='modLink12' aria-labelledby='modLink12 modTitle12' href="https://app.socialmediatestdrive.org/intro/advancedlit" class="card-text" target="_none">
+              Click here to start</a>
+            <span class="card-text">
+              the module.
+            </span>
+            <br>
+            <br>
+            <p class="card-text-csAlignment">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson: <span id='csTitle12'>This Just In!</span>
+              <a id='csLink12' aria-labelledby='csLink12 csTitle12' href="https://www.commonsense.org/education/digital-citizenship/lesson/this-just-in"  target="_blank">
                 Learn more...
               </a>
             </p>
