Updated the team page

--- a/team.html
+++ b/team.html
@@ -142,8 +142,7 @@
           </p>
           <p class="teamText">
             Dr. Dan Cosley. Dr. Cosley provides support for the design and
-            content development of the TestDrive project. Dr. Cosley is an
-            Associate Professor of Information Science at Cornell University.
+            content development of the TestDrive project.
           </p>
           <p class="teamText">
             Ashley Shea. Ms. Shea provides support for the design and content
