Advertisement for upcoming webinar

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
   <main>
     <div class="section1 container-fluid">
 
+      <!-- Temporary advertisement for webinar -->
+      <div class="row align-items-center" style="background-color:white; min-height:100px; margin: 0 30px 0 30px">
+        <div class="col-12 d-flex align-items-center">
+          <img class="d-none d-md-block" src="img/20201020_commonsense-event.png" alt="" style="padding:10px 15px 10px 0px; max-height:100px;">
+          <h3 style="padding:10px 15px 10px 0px"> Join us for an informational webinar about TestDrive on Oct 20! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
+        </div>
+      </div>
+
       <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
         <div id="intro" class="col-md-6">
