--- a/modules.html
+++ b/modules.html
@@ -75,7 +75,7 @@
       <div class="row align-items-center" style="background-color:white; min-height:100px; margin: 0 30px 0 30px">
         <div class="col-12 d-flex align-items-center">
           <img class="d-none d-md-block" src="img/20201020_commonsense-event.png" alt="" style="padding:10px 15px 10px 0px; max-height:100px;">
-          <h3 style="padding:10px 15px 10px 0px"> Join us for an informational webinar about TestDrive on Oct 20! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
+          <h3 style="padding:10px 15px 10px 0px"> View our informational webinar about TestDrive! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
         </div>
       </div>
 
