Commented out the webinar ads, added webinar link as a button in the educator page

--- a/for_educators.html
+++ b/for_educators.html
@@ -83,9 +83,14 @@
             <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none">
               Common Sense Education’s Digital Citizenship Curriculum.</a>
           </h4>
-          <a href="testdriveguide.pdf" target="_none">
-            <button type="button" class="nicelyRoundedButton">
+          <a href="testdriveguide.pdf" target="_none" style="text-decoration:none;">
+            <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
               View the educator guide
+            </button>
+          </a>
+          <a href="https://home.edweb.net/webinar/commonsense20201020/" target="_none" style="text-decoration:none;">
+            <button type="button" class="nicelyRoundedButton" style="margin:3px 0 3px 0;">
+              View the training
             </button>
           </a>
         </div>
