--- a/for_educators.html
+++ b/for_educators.html
@@ -88,7 +88,7 @@
               View the educator guide
             </button>
           </a>
-          <a href="https://home.edweb.net/webinar/commonsense20201020/" target="_none" style="text-decoration:none;">
+          <a href="/webinars.html" target="_none" style="text-decoration:none;">
             <button type="button" class="nicelyRoundedButton" style="margin:3px 0 3px 0;">
               View the training
             </button>
