--- a/press.html
+++ b/press.html
@@ -73,9 +73,11 @@
   <main>
     <div class='container-fluid'>
       <div class='row justify-content-center footerPageTitle'>
-        <h1>
-          Media and Press
-        </h1>
+        <div class='col-12 text-center'>
+          <h1>
+            Media and Press
+          </h1>
+        </div>
       </div>
 
       <!-- Psychology Today 2 -->
