Changes to module descriptions

--- a/modules.html
+++ b/modules.html
@@ -150,8 +150,8 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students explore how social media platforms are
-                          designed to keep their attention and practice healthy
+                          Explore how social media platforms are
+                          designed to keep your attention and practice healthy
                           media habits to achieve media balance.
                         </span>
                         <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
@@ -188,9 +188,9 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students explore how companies collect user data to
+                          Explore how companies collect user data to
                           display targeted ads on social media and learn how to
-                          identify ads and sponsored posts within their feed.
+                          identify ads and sponsored posts within your feed.
                         </span>
                         <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
                           Click here to start
@@ -224,7 +224,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students understand the consequences of identity theft
+                          Understand the consequences of identity theft
                           and learn how to identify and take action against
                           phishing scams on social media.
                         </span>
@@ -264,7 +264,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students identify signs of cyberbullying and practice
+                          Identify signs of cyberbullying and practice
                           how to respond when seeing cyberbullying happening to
                           others.
                         </span>
@@ -303,7 +303,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students learn what is safe to share with different
+                          Learn what is safe to share with different
                           social media audiences and what kind of information is
                           inappropriate to share on social media.
                         </span>
@@ -341,7 +341,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students explore how actions on social media create a
+                          Explore how actions on social media create a
                           digital footprint and learn skills to positively shape
                           digital footprints.
                         </span>
@@ -386,7 +386,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students learn how to manage self-presentation and how
+                          Learn how to manage self-presentation and how
                           online identities can change with different audiences
                           on social media.
                         </span>
@@ -422,7 +422,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students understand how social media sites collect
+                          Understand how social media sites collect
                           information about users and learn strategies for
                           protecting privacy on social media.
                         </span>
@@ -460,7 +460,7 @@
                       </a>
                       <div class="card-body">
                         <span class="card-text">
-                          Students understand why fake news exists and how to
+                          Understand why fake news exists and how to
                           identify the telltale signs of fake news on social
                           media.
                         </span>
@@ -510,8 +510,8 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students explore how social media platforms are designed to keep
-              their attention and practice healthy media habits to achieve media
+              Explore how social media platforms are designed to keep
+              your attention and practice healthy media habits to achieve media
               balance.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
@@ -546,9 +546,9 @@
           </a>
           <div class="card-body">
             <span class="card=text">
-              Students explore how companies collect user data to display
+              Explore how companies collect user data to display
               targeted ads on social media and learn how to identify ads and
-              sponsored posts within their feed.
+              sponsored posts within your feed.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
               Click here to start
@@ -582,7 +582,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students understand the consequences of identity theft and learn
+              Understand the consequences of identity theft and learn
               how to identify and take action against phishing scams on social
               media.
             </span>
@@ -620,7 +620,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students identify signs of cyberbullying and practice how to
+              Identify signs of cyberbullying and practice how to
               respond when seeing cyberbullying happening to others.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
@@ -658,7 +658,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students learn what is safe to share with different social media
+              Learn what is safe to share with different social media
               audiences and what kind of information is inappropriate to share
               on social media.
             </span>
@@ -696,7 +696,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students explore how actions on social media create a digital
+              Explore how actions on social media create a digital
               footprint and learn skills to positively shape digital footprints.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
@@ -733,7 +733,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students learn how to manage self-presentation and how online
+              Learn how to manage self-presentation and how online
               identities can change with different audiences on social media.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
@@ -768,7 +768,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students understand how social media sites collect information
+              Understand how social media sites collect information
               about users and learn strategies for protecting privacy on social
               media.
             </span>
@@ -806,7 +806,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Students understand why fake news exists and how to identify the
+              Understand why fake news exists and how to identify the
               telltale signs of fake news on social media.
             </span>
             <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
@@ -848,8 +848,8 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people learn how to create an account on social media and
-              practice how to protect their privacy online by creating a safe
+              Learn how to create an account on social media and
+              practice how to protect your privacy online by creating a safe
               username and a strong password.
             </span>
             <a id='modLink10' aria-labelledby='modLink10 modTitle10' href="https://app.socialmediatestdrive.org/intro/accounts" class="card-text" target="_none">
@@ -879,7 +879,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people reflect on how social media can make them feel and
+              Reflect on how social media can make you feel and
               learn how to use social media in a positive and balanced way.
             </span>
             <a id='modLink11' aria-labelledby='modLink11 modTitle11' href="https://app.socialmediatestdrive.org/intro/esteem" class="card-text" target="_none">
@@ -917,7 +917,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-               Young people learn how to react to breaking news on social media
+               Learn how to react to breaking news on social media
                and practice strategies for identifying reliable news online.
             </span>
             <a id='modLink12' aria-labelledby='modLink12 modTitle12' href="https://app.socialmediatestdrive.org/intro/advancedlit" class="card-text" target="_none">
@@ -953,7 +953,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people learn what is safe to share with different social media
+              Learn what is safe to share with different social media
               audiences and what kind of information is inappropriate to share
               on social media.
             </span>
@@ -990,7 +990,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people explore how actions on social media create a digital
+              Explore how actions on social media create a digital
               footprint and learn skills to positively shape digital footprints.
             </span>
             <a id='modLink2' aria-labelledby='modLink2 modTitle2' href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
@@ -1026,8 +1026,8 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people identify signs of cyberbullying and practice how to
-              respond when seeing cyberbullying happening to others.
+              Identify signs of cyberbullying and practice how to
+              respond when you see cyberbullying happening to others.
             </span>
             <a id='modLink3' aria-labelledby='modLink3 modTitle3' href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
               Click here to start</a>
@@ -1063,8 +1063,8 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people explore how social media platforms are designed to keep
-              their attention and practice healthy media habits to achieve media
+              Explore how social media platforms are designed to keep
+              your attention and practice healthy media habits to achieve media
               balance.
             </span>
             <a id='modLink4' aria-labelledby='modLink4 modTitle4' href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
@@ -1100,7 +1100,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people learn how to manage self-presentation and how online
+              Learn how to manage self-presentation and how online
               identities can change with different audiences on social media.
             </span>
             <a id='modLink5' aria-labelledby='modLink5 modTitle5' href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
@@ -1136,7 +1136,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people understand how social media sites collect information
+              Understand how social media sites collect information
               about users and learn strategies for protecting privacy on social
               media.
             </span>
@@ -1173,9 +1173,9 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people explore how companies collect user data to display
+              Explore how companies collect user data to display
               targeted ads on social media and learn how to identify ads and
-              sponsored posts within their feed.
+              sponsored posts within your feed.
             </span>
             <a id='modLink7' aria-labelledby='modLink7 modTitle7' href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
               Click here to start</a>
@@ -1210,7 +1210,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people understand the consequences of identity theft and learn
+              Understand the consequences of identity theft and learn
               how to identify and take action against phishing scams on social
               media.
             </span>
@@ -1247,7 +1247,7 @@
           </a>
           <div class="card-body">
             <span class="card-text">
-              Young people understand why fake news exists and how to identify the
+              Understand why fake news exists and how to identify the
               telltale signs of fake news on social media.
             </span>
             <a id='modLink9' aria-labelledby='modLink9 modTitle9' href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
