Added link to privacy policy in footer

--- a/terms.html
+++ b/terms.html
@@ -161,6 +161,9 @@
           <a href="terms.html" class="footer-link">Terms & Copyright</a>
         </div>
         <div class="col-auto">
+          <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+        </div>
+        <div class="col-auto">
           <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
             Contact Us
           </a>
