--- a/for_educators.html
+++ b/for_educators.html
@@ -179,11 +179,45 @@
         </div>
 
         <!-- Button -->
-        <div class="row justify-content-center" style="padding-bottom:2em;">
+        <div class="row addPaddingBottom justify-content-center">
           <div class="col d-flex justify-content-center">
             <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
               <button type="button" class="nicelyRoundedButton">
                 Contact us
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Join List-serv Section -->
+      <div class="container-fluid">
+        <!-- Title -->
+        <div class="row paddedTop justify-content-center">
+          <div class="col text-center">
+            <h1> Want to find out more? </h1>
+          </div>
+        </div>
+
+        <!-- Subtext -->
+        <div class="row justify-content-center">
+          <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+            <h4 class="listServSubtext">
+              You can join our e-mail listserv to hear the latest news about
+              Social Media TestDrive.
+            </h4>
+            <h4>
+              Click the button below and press "Send" to join.
+            </h4>
+          </div>
+        </div>
+
+        <!-- Join List-serv Button -->
+        <div class="row addPaddingBottom justify-content-center">
+          <div class="col d-flex justify-content-center">
+            <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top"  class="customHyperlink">
+              <button type="button" class="nicelyRoundedButton">
+                Sign up
               </button>
             </a>
           </div>
