--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <a class="nav-link" href="for_parents.html">For Parents</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="research.html">Research</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
         </ul>
