--- a/research.html
+++ b/research.html
@@ -35,12 +35,17 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html" class="logoLinkContainer">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
+        class="d-inline-block align-top testDriveLogo"
+        alt="Social Media TestDrive Logo">
         <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
         </span>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,9 +63,13 @@
             <a class="nav-link" href="for_parents.html">For Parents</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="research.html">Research</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
         </ul>
+
       </div>
     </nav>
   </header>
@@ -89,7 +98,7 @@
         </p>
         <p class="researchParagraph">
           Please fill in
-          <a href="https://forms.gle/8u42Z7z2ZqLqLPi69" class='customHyperlink'>
+          <a href="https://forms.gle/M33ztd1kMgKzsdHA8" class='customHyperlink'>
             this survey</a>
           if you are interested in giving us feedback
           or participate in our future research. We will contact you directly
