Updates to the research page: added new email and research opportunities pdf

--- a/research.html
+++ b/research.html
@@ -123,9 +123,12 @@
           This study will evaluate the effectiveness of Social Media TestDrive
           by measuring students’ knowledge level after they learn with some
           modules related to social media literacy topics. Please
-          <a href="https://drive.google.com/file/d/11pEcvyAKKhyENb7TzromkgJUOsoRrRN2/view" class='customHyperlink'>
+          <a href="Social Media TestDrive research opp.pdf" target="_none" class="customHyperlink">
             click here</a>
-          to learn more about this study and how you can participate.
+          to learn more about this study and how you can participate, or email
+          us at
+          <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">
+            smtdevaluation@gmail.com</a>.
         </p>
       </div>
     </div>
