--- a/for_educators.html
+++ b/for_educators.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/foreducators.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
@@ -76,9 +77,9 @@
   <main>
     <div class='container-fluid'>
 
-      <!-- Temporary Recriutment Banner -->
+      <!-- Temporary Announcement Banner -->
       <!-- Comment out when no longer needed -->
-      <div class="row align-items-center recruitmentBanner">
+      <div class="row align-items-center announcementBanner">
         <div class="col-12 d-flex align-items-center">
           <!-- Free, open source bootstrap icon: circle fill -->
           <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
@@ -92,7 +93,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
             <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z"/>
           </svg>
-          <!-- Recruitment Banner Text -->
+          <!-- Announcement Banner Text -->
           <p>
             <span class="largeText boldText">Help us test TestDrive!</span>
             Use <span class="italicText">Social Media TestDrive</span>
