--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/webinarBanner.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
@@ -78,11 +79,10 @@
     <div class="section1 container-fluid">
 
       <!-- Temporary advertisement for webinar -->
-      <!-- Commented out the section for any potential future use -->
-      <!-- <div class="row align-items-center" style="background-color:white; min-height:100px; margin: 0 30px 0 30px">
+      <!-- <div class="row align-items-center webinarBanner">
         <div class="col-12 d-flex align-items-center">
-          <img class="d-none d-md-block" src="img/20201020_commonsense-event.png" alt="" style="padding:10px 15px 10px 0px; max-height:100px;">
-          <h3 style="padding:10px 15px 10px 0px"> View our informational webinar about TestDrive! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
+          <img class="d-none d-md-block" src="img/webinars/20201020_commonsense-event.png" alt="">
+          <h3> View our informational webinar about TestDrive! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
         </div>
       </div> -->
 
