--- a/modules.html
+++ b/modules.html
@@ -7,6 +7,8 @@
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/webinarBanner.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/modules.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
   <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
@@ -76,12 +78,36 @@
     <div class='container-fluid'>
 
       <!-- Temporary advertisement for webinar -->
-      <!-- <div class="row align-items-center" style="background-color:white; min-height:100px; margin: 0 30px 0 30px">
+      <!-- <div class="row align-items-center webinarBanner">
         <div class="col-12 d-flex align-items-center">
-          <img class="d-none d-md-block" src="img/20201020_commonsense-event.png" alt="" style="padding:10px 15px 10px 0px; max-height:100px;">
-          <h3 style="padding:10px 15px 10px 0px"> View our informational webinar about TestDrive! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
+          <img class="d-none d-md-block" src="img/webinars/20201020_commonsense-event.png" alt="">
+          <h3> View our informational webinar about TestDrive! <a target="_none" href="https://home.edweb.net/webinar/commonsense20201020/">Click Here</a></h3>
         </div>
       </div> -->
+
+      <!-- Temporary Announcement Banner -->
+      <!-- Comment out when no longer needed -->
+      <div class="row align-items-center announcementBanner">
+        <div class="col-12 d-flex align-items-center">
+          <!-- Free, open source bootstrap icon: circle fill -->
+          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+          <!-- Altered the width, height, and fill -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+            <circle cx="8" cy="8" r="8"/>
+          </svg>
+          <!-- Free, open source bootstrap icon: megaphone fill -->
+          <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+          <!-- Altered the width, height, and fill -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+            <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z"/>
+          </svg>
+          <!-- announcement Banner Text -->
+          <p>
+            <span class="largeText boldText">New!</span>
+            Modules have a voiceover feature now!
+          </p>
+        </div>
+      </div>
 
       <!-- Title -->
       <div class="row justify-content-center" style="padding-top:3em;">
