Added youth and digital harms study information to research page

--- a/research.html
+++ b/research.html
@@ -77,14 +77,14 @@
   <main>
     <div class='container-fluid'>
       <!-- Section Title -->
-      <div class="row justify-content-center" style="padding-top:3em;">
+      <div class="row justify-content-center pageSectionTitle">
         <div class="col-sm-12 col-md-10 col-lg-10 text-center">
           <h1> Research </h1>
         </div>
       </div>
 
       <!-- Text Block -->
-      <div class='row researchRow' style="padding-top:2em; padding-bottom:15px;">
+      <div class='row researchRow'>
         <p class="researchParagraph">
           The design of Social Media TestDrive is guided by learning theories
           that were proven effective to help students learn. To enhance user
@@ -107,14 +107,14 @@
       </div>
 
       <!-- Section Title -->
-      <div class="row justify-content-center" style="padding-top:3em;">
+      <div class="row justify-content-center pageSectionTitle">
         <div class="col-sm-12 col-md-10 col-lg-10 text-center">
           <h1> Participate in Our Ongoing Research </h1>
         </div>
       </div>
 
       <!-- Item -->
-      <div class='row researchRow' style="padding-top:3em; padding-bottom:15px;">
+      <div class='row researchRow'>
         <h3 class="researchSectionTitle">
           April 2021-Mid May 2021: Knowledge outcome evaluation study
         </h3>
@@ -129,6 +129,27 @@
           us at
           <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">
             smtdevaluation@gmail.com</a>.
+        </p>
+      </div>
+
+      <!-- Item -->
+      <div class='row researchRow'>
+        <h3 class="researchSectionTitle">
+          July 2021- September 2021: Youth and Digital Harms Study
+        </h3>
+        <br>
+        <p class="researchParagraph">
+          This study explores how parents/caregivers and educators help youth
+          navigate digital risks and harms on social media. To learn more about
+          this study and how you can participate, if you are a parent/caregiver
+          <a href="youth_and_digital_harms_research_opp_parents.pdf" target="_none" class="customHyperlink">
+            please click here</a>
+          and if you are an educator
+          <a href="youth_and_digital_harms_research_opp_educators.pdf" target="_none" class="customHyperlink">
+            please click here</a>,
+          or email us at
+          <a href="mailto:Parentproject@cornell.edu" target="_top" class="customHyperlink">
+            Parentproject@cornell.edu</a>.
         </p>
       </div>
     </div>
