Update to knowledge outcome evaluation study timeline on research page

--- a/research.html
+++ b/research.html
@@ -116,7 +116,7 @@
       <!-- Item -->
       <div class='row researchRow'>
         <h3 class="researchSectionTitle">
-          April 2021 - Mid May 2021: Knowledge outcome evaluation study
+          April 2021 - October 2021: Knowledge outcome evaluation study
         </h3>
         <br>
         <p class="researchParagraph">
