Updated the Youth and Digital Harms Study description on the research page

--- a/research.html
+++ b/research.html
@@ -140,7 +140,7 @@
         <br>
         <p class="researchParagraph">
           This study explores how parents/caregivers and educators help youth
-          navigate digital risks and harms on social media. To learn more about
+          navigate digital risks on social media. To learn more about
           this study and how you can participate, if you are a parent/caregiver
           <a href="youth_and_digital_harms_research_opp_parents.pdf" target="_none" class="customHyperlink">
             please click here</a>
