Uploading new flyers for the Youth and Digital Harms Study

--- a/research.html
+++ b/research.html
@@ -142,10 +142,10 @@
           This study explores how parents/caregivers and educators help youth
           navigate digital risks on social media. To learn more about
           this study and how you can participate, if you are a parent/caregiver
-          <a href="youth_and_digital_harms_research_opp_parents.pdf" target="_none" class="customHyperlink">
+          <a href="youth_and_digital_harms_research_opp_parents.pdf?v=2" target="_none" class="customHyperlink">
             please click here</a>
           and if you are an educator
-          <a href="youth_and_digital_harms_research_opp_educators.pdf" target="_none" class="customHyperlink">
+          <a href="youth_and_digital_harms_research_opp_educators.pdf?v=2" target="_none" class="customHyperlink">
             please click here</a>,
           or email us at
           <a href="mailto:Parentproject@cornell.edu" target="_top" class="customHyperlink">
