--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           <li class="nav-item">
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="donate.html">Donate</a>
+          </li> -->
         </ul>
 
       </div>
