updated donation2 car photo

--- a/donate2.html
+++ b/donate2.html
@@ -123,7 +123,7 @@
 
       <!-- Pictures -->
       <div class="row justify-content-center">
-        <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
+        <!-- <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
           <img id="donate_img" src="img/donate2_2.svg" alt="">
         </div>
         <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
@@ -132,6 +132,9 @@
         <div id="donate_graphic" class="col-sm-4 col-md-4 col-lg-4">
           <img id="donate_img" src="img/donate2_2.svg" alt="">
         </div>
+        </div> -->
+        <div id="donate_graphic" class="col-sm-12 col-md-12 col-lg-12">
+          <img id="donate_img" src="img/donate2_3.svg" alt="">
         </div>
       </div>
     </div>
